<resources>
    <string name="app_name">HelpMeCook</string>
    <string name="title_activity_recipe">Receita</string>
    <string name="title_activity_name_search_results">Pesquisar</string>
    <string name="title_activity_recipe_register">Criar Receita</string>
    <string name="title_activity_ingredient_selection">Selecionar Ingredientes</string>
    <string name="title_activity_cookbook">Meu Cookbook</string>
    <string name="title_activity_map">Onde Encontrar Comida?</string>
    <string name="title_activity_info">Info</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Configurações</string>

    <string name="taste">Sabor</string>
    <string name="difficulty">Dificuldade</string>
    <string name="recents">RECENTES</string>
    <string name="pop">Mais vistas</string>
    <string name="classify_taste">Classifique o sabor dessa receita</string>
    <string name="classify_difficulty">Classifique a dificuldade dessa receita</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">Ok</string>
    <string name="recipe_register">Criar Receita</string>
    <string name="no_ingredients">Selecione os ingredientes da receita</string>
    <string name="blank_fields">Há campos obrigatórios em branco</string>
    <string name="cookbook_alert">Seu cookbook está vazio</string>
    <string name="preparation_mode">MODO DE PREPARO</string>
    <string name="search_ingredients">Procure pelo ingrediente</string>

    <!-- Nomes dos itens da nav drawer -->
    <string-array name="nav_drawer_items">
        <item>Início</item>
        <item>Buscar por Ingrediente</item>
        <item>Meu CookBook</item>
        <item>Criar Receita</item>
        <item>Onde Encontrar Comida?</item>
        <item>Info</item>
    </string-array>

    <!-- RecipeRegisterActivity -->
    <string name="recipe_name">Nome da Receita</string>
    <string name="recipe_details">Modo de Preparo</string>
    <string name="portion_num">Número de Porções:</string>
    <string name="estimated_time">Tempo de Preparação:</string>
    <string name="ingredients">INGREDIENTES</string>
    <string name="add_ingredient">ADICIONAR</string>
    <string name="minutes">minutos</string>
    <string name="portions">porções</string>
    <string name="ingrendiets">Ingredientes</string>


    <string name="search_by_name">Pesquisar por Nome</string>
    <string name="search">BUSCAR</string>
    <string name="name_search">Nome da Receita</string>
    <string name="btOk">Ok</string>
    <string name="sugestion">Sugerir ingrediente</string>


    <!--IngredientSearchResults-->
    <string name="title_activity_ingredient_search_result">Resultados</string>
    <string name="results">Apenas ingredientes selecionados</string>
    <string name="resultsplusone">Presisam de ingredientes extras</string>
    <string name="recipe_registered">Criada com sucesso!</string>
    <string name="what_are_you_doing">O que exatamente você está tentando fazer?</string>
    <string name="cant_search">Não foi possível realizar a busca</string>
    <string name="tv_ingredients">INGREDIENTES</string>
    <string name="tv_complementary_info">INFORMAÇÕES COMPLEMENTARES</string>
    <string name="tv_preparation_mode">MODO DE PREPARO</string>
    <string name="title_recipe_alert">Deseja mesmo sair?</string>
    <string name="warning_recipe_alert">Suas alterações serão perdidas</string>
    <string name="title_search_result_alert">Não foram encontradas receitas</string>
    <string name="warning_search_result_alert">Deseja procurar no mapa estabelecimentos onde pode encontrar comida?</string>
    <string name="cancel_recipe">Cancelar receita</string>

    <string name="units">unid.</string>
    <string name="grams">grama(s)</string>
    <string name="milliliter">ml</string>
    <string name="unitless">a gosto</string>
    <string name="pinch">pitada(s)</string>
    <string name="tablespoon">colher(es) de sopa</string>
    <string name="deseartpoon">colher(es) de sobremesa</string>
    <string name="teaspoon">colher (es) de chá</string>
    <string name="coffeespoon">colher(es) de café</string>
    <string name="cup">xícara(s)</string>
    <string name="slice">fatia(s)</string>


    <string name="waiting_popular_recipes">Carregando Receitas Populares...</string>
    <string name="cant_connect">Não foi possível conectar à internet.</string>
    <string name="waiting_recents_popular_recipes">Carregando receitas...</string>
    <string name="popular">POPULARES</string>
    <string name="loading_recipe">Carregando receita...</string>
    <string name="saving_recipe">Salvando receita...</string>
    <string name="searching">Buscando...</string>
    <string name="searching_places">Buscando lugares próximos...</string>
    <string name="classifing_recipe">Estamos validando sua opinião...</string>
    <string name="accessibilityPictureDescription">Foto da Receita</string>
    <string name="no_connection">Sem conexão com internet</string>
    <string name="error_open_recipe">Não foi possível abrir esta receita</string>
    <string name="empty_search">Insira um valor para a pesquisa</string>

    <string name="no_location_found">Não foi possível encontrar a localização</string>
    <string name="must_select_ingredient_message">Você deve selecionar algum ingrediente!</string>
    <string name="no_results">Não foram encontradas receitas</string>
    <string name="timeout">Tempo limite de espera atingido, verifique sua internet</string>
    <string name="too_much_ingredients_selecteds">Você não pode fazer uma receita com tantos ingredientes!</string>
    <string name="no_namesearch_result">Nenhum resultado obtido.</string>

    <!-- MapFragment -->




</resources>
