<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:paddingTop="0dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:contentDescription="Imagem da receita"
            android:id="@+id/ivRegisterRecipe"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/plate"
            android:cropToPadding="false"
            android:adjustViewBounds="false"
            android:scaleType="centerCrop"/>
        <EditText
            android:id="@+id/tvRecipeRegisterTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textStyle="italic"
            android:hint="@string/register_recipe_hint"
            android:gravity="start"/>

        <TextView
            android:id="@+id/tvRecipeRegisterIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:text="@string/ingrendiets"
            android:gravity="left"
            android:layout_weight="1" />

        <ListView
            android:id="@+id/lvRegisterRecipeIngredients"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:hint="@string/add_ingredient"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:weightSum="100">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/estimated_time"
                android:layout_gravity="center"
                android:layout_weight="60"/>
            <EditText
                android:id="@+id/etPreparationTime"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="20"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:textSize="18sp"
                android:layout_weight="20"
                android:text="@string/minutes"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:weightSum="100">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/portion_num"
                android:layout_weight="60"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/etPortionsNumber"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="20"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:textSize="18sp"
                android:layout_weight="20"
                android:text="@string/portions"/>
        </LinearLayout>

        <EditText
            android:id="@+id/tvRegisterRecipeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:lines="4"
            android:textSize="16sp"
            android:textStyle="italic"
            android:hint="@string/recipe_description_hint"
            android:gravity="start"
            />
    </LinearLayout>
</ScrollView>
